# tetriostattracker

./: .gitignore  _debug_analysis.py  _debug_analysis2.py  _debug_id21.py  _debug_id26.py  _debug_id26b.py  _debug_id28.py  _debug_id28b.py  _debug_id28c.py  _debug_id40.py  _debug_trace.py  _debug_trace2.py  debug_ocr.py  inspect_ocr.py  pyproject.toml  pytest.ini  requirements.txt  ttr_tracker.bat
scripts/: debug_ocr.py  inspect_ocr.py  test_km_fix.py
tests/: test_ocr_accuracy.py
ttr_tracker/: __main__.py  cli.py  database.py  importer.py  models.py  ocr.py  parser.py  queries.py  stats.py  survival.py
ttr_tracker/dashboard/: app.py
ttr_tracker/dashboard/templates/: blitz_stats.html  index.html  match_detail.html  matches.html  ocr_test.html  partial_run_detail.html  partial_run_edit.html  partial_runs.html  pbs.html  replay_detail.html  replays.html  sessions.html  trends.html
