[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tetriostattracker"
version = "0.1.0"
description = "TETR.IO stats tracker with replay import, OCR, dashboard, and survival analysis"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "jinja2>=3.1",
    "click>=8.1",
    "python-multipart>=0.0",
    "Pillow>=10.0",
    "pytesseract>=0.3",
    "numpy>=1.24",
]

[project.scripts]
ttr-tracker = "ttr_tracker.cli:cli"

[tool.setuptools.packages.find]
include = ["ttr_tracker*"]
